[package]
name = "reign_plugin_static"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Static asset server plugin for reign"
repository = "https://github.com/pksunkara/reign"
keywords = ["static", "assets", "web", "reign", "plugin"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_plugin_static"
path = "src/lib.rs"

[dependencies]
reign_plugin = { path = "../../reign_plugin", version = "0.2.1" }
log = "0.4.8"
mime_guess = "2.0.3"
tokio = { version = "1.2.0", features = ["fs"] }
chrono = "0.4.19"
hyper = { version = "0.14.2", features = ["stream"] }

[dev-dependencies]
reign = { path = "../../" }
tokio = { version = "1.2.0", features = ["macros"] }
version-sync = "0.9.0"

[features]
default = []
doc = []

[package.metadata.docs.rs]
all-features = true
