[package]
name = "reign_plugin_static"
version = "0.2.1"
description = "Static asset server plugin for reign"
keywords = ["static", "assets", "web", "reign", "plugin"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_plugin_static"
path = "src/lib.rs"

[features]
default = []

[dependencies]
chrono = { workspace = true }
hyper = { workspace = true, features = ["stream"] }
log = { workspace = true }
mime_guess = "2.0.3"
reign_plugin = { path = "../../reign_plugin", version = "0.2.1" }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
reign = { path = "../../" }
tokio = { workspace = true, features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
