[package]
name = "reign_derive"
version = "0.1.2"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = []
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
reign_view = { path = "../reign_view", version = "0.1.2" }
syn = { version = "1.0.22", features = ["full"] }
quote = "1.0.6"
proc-macro-error = "1.0.2"
proc-macro2 = "1.0.13"
regex = "1.3.7"
Inflector = "0.11.4"
lazy_static = "1.4.0"

[dev-dependencies]
reign = { path = "../", features = ["view-actix", "json"] }
version-sync = "0.9.0"
trybuild = "1.0"

[features]
default = []
doc = []
view = []
view-actix = ["view"]
view-gotham = ["view"]
view-tide = ["view"]
view-warp = ["view"]
json = ["view"]
router = []
router-actix = ["router"]
router-gotham = ["router"]
router-tide = ["router"]
router-warp = ["router"]

[package.metadata.docs.rs]
all-features = true
