[package]
name = "reign_derive"
version = "0.1.2"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = []
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.22", features = ["full"] }
quote = "1.0.6"
proc-macro-error = "1.0.2"
proc-macro2 = "1.0.13"
regex = { version = "1.3.9", optional = true }
Inflector = { version = "0.11.4", optional = true }
lazy_static = { version = "1.4.0", optional = true }
reign_view = { path = "../reign_view", version = "0.1.2", optional = true }

[dev-dependencies]
reign = { path = "../", features = ["view-router"] }
version-sync = "0.9.0"
trybuild = "1.0"

[features]
default = []
doc = []
view = ["reign_view", "regex", "Inflector", "lazy_static"]
view-router = ["view", "router"]
router = []

[package.metadata.docs.rs]
all-features = true
