[package]
name = "reign_router"
version = "0.1.2"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = []
license = "MIT"
readme = "README.md"

[lib]
name = "reign_router"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "3.0.0-alpha.3", optional = true }
actix-service = { version = "1.0.5", optional = true }
gotham = { version = "0.5.0-rc.1", optional = true }
gotham_derive = { version = "0.5.0-rc.1", optional = true }
borrow-bag = { version = "1", optional = true }
tide = { version = "0.8.1", optional = true }
async-std = { version = "1.6.0", optional = true }
warp = { version = "0.2.2", optional = true }
serde = { version = "1.0.110", optional = true, features = ["derive"] }
mime = "0.3.16"
futures = "0.3.5"
chrono = "0.4.11"

[dev-dependencies]
reign = { path = "../" }
version-sync = "0.9.0"
tokio = { version = "0.2.21", features = ["full"] }
actix-rt = "1.1.1"
reqwest = "0.10.4"

[features]
default = []
doc = []
router-actix = ["actix-web", "actix-service"]
router-gotham = ["gotham", "gotham_derive", "borrow-bag", "serde"]
router-tide = ["tide", "async-std"]
router-warp = ["warp"]

[package.metadata.docs.rs]
all-features = true
