[package]
name = "reign_view"
version = "0.1.2"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = []
license = "MIT"
readme = "README.md"
exclude = ["src/views"]

[lib]
name = "reign_view"
path = "src/lib.rs"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
regex = "1.3.1"
Inflector = "0.11.4"
maplit = "1.0.2"
mime = { version = "0.3", optional = true }
actix-web = { version = "3.0.0-alpha.2", optional = true }
gotham = { git = "git://github.com/gotham-rs/gotham", branch = "master", optional = true }
tide = { version = "0.8.1", optional = true }
warp = { version = "0.2.2", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
reign = { path = "../" }
pretty_assertions = "0.6"
version-sync = "0.8"
actix-rt = "1.0"
tokio = "0.2"
reqwest = "0.10"

[features]
default = []
doc = []
parser = []
view-actix = ["actix-web", "mime"]
view-gotham = ["gotham", "mime"]
view-tide = ["tide", "mime"]
view-warp = ["warp", "mime"]
json = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true
