[package]
name = "reign_task_cargo"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
description = "Reign task for using cargo"
repository = "https://github.com/pksunkara/reign"
keywords = ["web", "reign", "task", "cargo"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_task_cargo"
path = "src/lib.rs"

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }

[dev-dependencies]
version-sync = "0.9.3"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
