[package]
name = "reign_task_cargo"
version = "0.2.1"
description = "Reign task for using cargo"
keywords = ["web", "reign", "task", "cargo"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_task_cargo"
path = "src/lib.rs"

[features]
default = []

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
