[package]
name = "reign_task_db"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2021"
description = "Reign task for database manipulation"
repository = "https://github.com/pksunkara/reign"
keywords = ["web", "reign", "task", "db", "diesel"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_task_db"
path = "src/lib.rs"

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
