[package]
name = "reign_task_db"
version = "0.2.1"
description = "Reign task for database manipulation"
keywords = ["web", "reign", "task", "db", "diesel"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_task_db"
path = "src/lib.rs"

[features]
default = []

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
