[package]
name = "reign_task_generate"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Reign task for generating files"
repository = "https://github.com/pksunkara/reign"
keywords = ["web", "reign", "task", "generate", "template"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_task_generate"
path = "src/lib.rs"

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1", features = ["templating"] }
Inflector = "0.11.4"
anyhow = "1.0.31"
atoi = "0.4.0"
serde = { version = "1.0.110", features = ["derive"] }

[dev-dependencies]
version-sync = "0.9.0"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
