[package]
name = "reign_task_generate"
version = "0.2.1"
description = "Reign task for generating files"
keywords = ["web", "reign", "task", "generate", "template"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_task_generate"
path = "src/lib.rs"

[features]
default = []

[dependencies]
anyhow = { workspace = true }
atoi = "0.4.0"
Inflector = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reign_task = { path = "../../reign_task", version = "0.2.1", features = ["templating"] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
