[package]
name = "reign_common_tasks"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Common & default tasks for reign"
repository = "https://github.com/pksunkara/reign"
keywords = ["web", "reign", "task"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_common_tasks"
path = "src/lib.rs"

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }
reign_task_cargo = { path = "../../tasks/reign_task_cargo", version = "0.2.1" }
reign_task_generate = { path = "../../tasks/reign_task_generate", version = "0.2.1" }
reign_task_db = { path = "../../tasks/reign_task_db", version = "0.2.1" }

[dev-dependencies]
version-sync = "0.9.3"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
