[package]
name = "reign_common_tasks"
version = "0.2.1"
description = "Common & default tasks for reign"
keywords = ["web", "reign", "task"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_common_tasks"
path = "src/lib.rs"

[features]
default = []

[dependencies]
reign_task = { path = "../../reign_task", version = "0.2.1" }
reign_task_cargo = { path = "../../tasks/reign_task_cargo", version = "0.2.1" }
reign_task_db = { path = "../../tasks/reign_task_db", version = "0.2.1" }
reign_task_generate = { path = "../../tasks/reign_task_generate", version = "0.2.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
