[package]
name = "reign_session_backend_redis"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Redis backend for reign session middleware"
repository = "https://github.com/pksunkara/reign"
keywords = ["session", "redis", "web", "reign", "router"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
name = "reign_session_backend_redis"
path = "src/lib.rs"

[dependencies]
reign_router = { version = "0.2.1", path = "../../reign_router", features = ["session"] }
log = "0.4.8"
bb8-redis = "0.5.0"

[dev-dependencies]
version-sync = "0.9.0"

[features]
default = []
doc = []

[package.metadata.docs.rs]
all-features = true
