[package]
name = "reign_session_backend_redis"
version = "0.2.1"
description = "Redis backend for reign session middleware"
keywords = ["session", "redis", "web", "reign", "router"]

authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "reign_session_backend_redis"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bb8-redis = { workspace = true }
log = { workspace = true }
reign_router = { path = "../../reign_router", version = "0.2.1", features = ["session"] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
