[package]
name = "examples_router_actix"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../../../reign", features = ["router-actix"], default-features = false }
actix-web = "3.0.0-alpha.3"
actix-rt = "1.0"
anyhow = "1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
test_examples = { path = "../../../reign/development/test_examples" }
