[package]
name = "examples_router_gotham"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../../../../reign", features = ["router-gotham"], default-features = false }
gotham = { git = "git://github.com/gotham-rs/gotham", branch = "master" }
gotham_derive = { git = "git://github.com/gotham-rs/gotham", branch = "master" }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
test_examples = { path = "../../../development/test_examples" }
