[package]
name = "examples_router_gotham"
version = "0.0.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
reign = { path = "../../../reign", features = ["router-gotham"], default-features = false }
gotham = "0.5.0-rc.1"
gotham_derive = "0.5.0-rc.1"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
anyhow = "1.0.31"
thiserror = "1.0.19"
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }

[dev-dependencies]
test_examples = { path = "../../../reign/development/test_examples" }
